--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -1,9 +1,59 @@
-
+.navbar
+  margin-bottom: 0
+  border: none
 .navbar-default
   background-color: $wt
   border-color: transparent
+  font-size: 16px
 
-.navbar-default .navbar-nav.navbar-main>.active>a, .navbar-default .navbar-nav.navbar-main>.active>a:hover
-  background-color: $wt
-  border-bottom: 4px solid $or
+  .navbar-nav>li>a
+    &:hover
+      background-color: #fff
+    padding: 5px 5px 10px
+
+  .navbar-wrp:nth-of-type(1)
+    padding: 15px 20px 10px 20px
+  .navbar-wrp:nth-of-type(2)
+    padding-top: 20px
+    padding-right: 15px
+
+  #navbar-top.navbar-nav>li
+    color: $bl 
+    padding-left: 5px
+    padding-right: 5px
+    font-size: 14px
+
+  ul#navbar-main
+    position: relative
+    top: 1px
+  #navbar-main.navbar-nav>li>a,
+    color: $bl 
+    padding-left: 10px
+    padding-right: 10px
+  #navbar-main.navbar-nav>.active>a,
+  #navbar-main.navbar-nav>.active>a:focus,
+  #navbar-main.navbar-nav>.active>a:hover
+    color: $bl 
+    background-color: $wt
+    border-bottom: 3px solid $or
   
+  #navbar-soc.navbar-nav>li>a,
+    color: $bl 
+    padding-left: 9px
+    padding-right: 9px
+  #navbar-soc.navbar-nav>.active>a,
+  #navbar-soc.navbar-nav>.active>a:focus,
+  #navbar-soc.navbar-nav>.active>a:hover
+    color: $bl 
+
+a.navbar-brand
+  border-right: 1px solid $gr
+  height: 100%
+  padding: 22px 40px
+  box-shadow: 1px 0px rgba(189,190,192,0.25)  
+
+.header-cont
+  height: 700px
+  background-image: url("../images/header.jpg")
+  background-size: contain
+  background-repeat: no-repeat
