--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -21,7 +21,7 @@
     color: $bl 
     padding-left: 5px
     padding-right: 5px
-    font-size: 14px
+    font-size: 13px
 
   ul#navbar-main
     position: relative
@@ -47,7 +47,7 @@
     color: $bl 
 
 a.navbar-brand
-  border-right: 1px solid $gr
+  border-right: 1px solid $gr1
   height: 100%
   padding: 22px 40px
   box-shadow: 1px 0px rgba(189,190,192,0.25)  
