--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -30,6 +30,8 @@
     color: $bl 
     padding-left: 10px
     padding-right: 10px
+    &:hover
+      color: $or
   #navbar-main.navbar-nav>.active>a,
   #navbar-main.navbar-nav>.active>a:focus,
   #navbar-main.navbar-nav>.active>a:hover
@@ -41,6 +43,8 @@
     color: $bl 
     padding-left: 9px
     padding-right: 9px
+    &:hover
+      color: $or
   #navbar-soc.navbar-nav>.active>a,
   #navbar-soc.navbar-nav>.active>a:focus,
   #navbar-soc.navbar-nav>.active>a:hover
