social icons in footer styled

--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -18,13 +18,13 @@ footer
         padding: 10px 0
         li
           display: inline
-          margin: 0 5px
+          margin: 0 3px
           &:first-of-type
             margin-left: 0
           a
-            padding: 2px
+            padding: 3px
             background-color: $wt
-            border-radius: 5px
+            border-radius: 4px
             color: $gr2
             font-size: 22px
             &:hover
@@ -32,5 +32,15 @@ footer
             i
               position: relative
               left: 4px
+            .fa-facebook-f
+              margin: 5px
+            .fa-instagram
+              margin: 3px
+              position: relative
+              top: 1px
+            .fa-google-plus-g
+              margin: -2px
         &:hover
           text-decoration: none
+
+
