section one home added and styled

--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -59,5 +59,5 @@ a.navbar-brand
 .header-cont
   height: 700px
   background-image: url("../images/header.jpg")
-  background-size: contain
+  background-size: cover
   background-repeat: no-repeat
