sections added and styled

--- a/sass/_sections.sass
+++ b/sass/_sections.sass
@@ -1,42 +1,136 @@
-section.container.sec-one
-  .row
-    padding-top: 80px
-    .col-md-3
-      padding-top: 150px
-      height: 100%
-      background-position: 50% 0%
-      h2, p, a
-        text-align: center
-        display: block
-        font-size: 18px
-        color: $bl
-      h2
-        font-weight: bold
-        font-size: 20px
-        padding-bottom: 25px
-      p
-        padding-bottom: 30px
-        padding-left: 10px
-        padding-right: 10px
-      a
-        font-size: 16px
-        color: $or
-        font-weight: bold
-        text-decoration: none
-        padding-bottom: 50px
-        &:hover
-          // color: lighten($or, 20%)
-          color: lighten($bl, 20%) 
-    .col-md-3:nth-of-type(1) 
-      background-image: url("../images/hm-ico-1.jpg")
-      background-repeat: no-repeat
-    .col-md-3:nth-of-type(2) 
-      background-image: url("../images/hm-ico-2.jpg")
-      background-repeat: no-repeat
-    .col-md-3:nth-of-type(3) 
-      background-image: url("../images/hm-ico-3.jpg")
-      background-repeat: no-repeat
-    .col-md-3:nth-of-type(4) 
-      background-image: url("../images/hm-ico-4.jpg")
-      background-repeat: no-repeat
+section.sec-one
+  padding: 100px 0
+  .container
+    .row
+      padding-top: 60px
+      .col-md-3
+        padding-top: 150px
+        height: 100%
+        background-position: 50% 0%
+        h2, p, a
+          text-align: center
+          display: block
+          font-size: 18px
+          color: $bl
+        h2
+          font-weight: bold
+          font-size: 20px
+          padding-bottom: 35px
+        p
+          padding-bottom: 30px
+          padding-left: 10px
+          padding-right: 10px
+        a
+          font-size: 16px
+          color: $or
+          font-weight: bold
+          text-decoration: none
+          padding-bottom: 50px
+          &:hover
+            color: lighten($bl, 20%) 
+      .col-md-3:nth-of-type(1) 
+        background-image: url("../images/hm-ico-1.jpg")
+        background-repeat: no-repeat
+      .col-md-3:nth-of-type(2) 
+        background-image: url("../images/hm-ico-2.jpg")
+        background-repeat: no-repeat
+      .col-md-3:nth-of-type(3) 
+        background-image: url("../images/hm-ico-3.jpg")
+        background-repeat: no-repeat
+      .col-md-3:nth-of-type(4) 
+        background-image: url("../images/hm-ico-4.jpg")
+        background-repeat: no-repeat
     
+section.sec-two
+  background: $gr3
+  h2
+    background: $wt
+    padding: 40px 0 35px 0
+    margin: 0
+    font-weight: bold
+  .container
+    .row
+      .col-md-12
+        .sl-cont
+          background-image: url("../files/sl-mock.jpg")
+          background-repeat: no-repeat
+          background-size: contain
+          height: 593px
+
+section.sec-three
+  width: 100%
+  background: $or
+  padding: 60px 0
+  .col-md-8
+    h2, p
+      color: $wt
+      margin: 0
+    h2
+      font-size: 24px
+      font-weight: bold
+    p
+      font-size: 16px
+  .col-md-4
+    padding: 20px 0
+    background: $gr2
+    a
+      color: $wt
+      display: block
+      width: 100%
+      text-decoration: none
+      font-size: 24px
+      font-weight: bold
+
+section.sec-four
+  padding: 100px 0
+  .container
+    h2
+      padding: 40px 0 35px 0
+      margin: 0
+      font-weight: bold
+    .col-md-12  
+      .sl-cont
+          background-image: url("../files/tes-mock.jpg")
+          background-repeat: no-repeat
+          background-position: 50% 0%
+          height: 200px
+
+section.sec-five
+  padding: 100px 0
+  background: $gr3
+  .container
+    .row
+      p
+        color: $gr1
+      h2
+        padding: 40px 0 35px 0
+        margin: 0
+        font-weight: bold
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
