--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -4,3 +4,10 @@ $bl: #020202
 $gr1: #bdbec0
 $gr2: #1b252f
 $gr3: #ededed
+
+$screen-lg-min: 1200px
+$screen-md-min: 992px
+$screen-sm-min: 768px
+
+$screen-collapse-min: 832px
+
