--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -1,6 +1,11 @@
 footer
+  .container
+    hr
+      opacity: 0.2
+    p
+      color: $wt
   padding-top: 70px
-  padding-bottom: 70px
+  padding-bottom: 20px
   background-color: $gr2
   ul.ft-lt
     list-style: none
@@ -16,9 +21,10 @@ footer
       .ft-soc-lt
         list-style: none
         padding: 10px 0
+        margin-top: 5px
         li
           display: inline
-          margin: 0 3px
+          margin: 0 1px
           &:first-of-type
             margin-left: 0
           a
@@ -26,7 +32,7 @@ footer
             background-color: $wt
             border-radius: 4px
             color: $gr2
-            font-size: 22px
+            font-size: 18px
             &:hover
               background-color: $or
             i
@@ -43,4 +49,57 @@ footer
         &:hover
           text-decoration: none
 
+.animation-map
+  margin-left: -25px
+  margin-top: -3px
+  #container1
+    margin-top: 20px
+    margin-left: 30px
+    position: absolute
+    background: #f93
+    top: 55px
+    right: 175px
+    .dot
+      border: 10px solid #f93
+      background: transparent
+      -webkit-border-radius: 60px
+      -moz-border-radius: 60px
+      border-radius: 60px
+      height: 50px
+      width: 50px
+      -webkit-animation: pulse 3s ease-out
+      -moz-animation: pulse 3s ease-out
+      animation: pulse 3s ease-out
+      -webkit-animation-iteration-count: infinite
+      -moz-animation-iteration-count: infinite
+      animation-iteration-count: infinite
+      position: absolute
+      top: -20px
+      left: -20px
+      z-index: 1
+      opacity: 0
+    .pulse
+      width: 10px
+      height: 10px
+      border: 5px solid #f93
+      -webkit-border-radius: 30px
+      -moz-border-radius: 30px
+      border-radius: 30px
+      background-color: #f93
+      z-index: 10
+      position: absolute
 
+@media (max-width: $screen-md-min)
+  .col-sm-6
+    margin-bottom: 25px
+  .animation-map
+    margin-top: -10px
+@media (max-width: $screen-sm-min)
+  .col-xs-12
+    text-align: center
+    margin-bottom: 25px
+  .ft-lt
+    padding: 0
+  .animation-map
+    margin-left: 0
+    margin-top: 0
