--- a/sass/_sections.sass
+++ b/sass/_sections.sass
@@ -70,6 +70,9 @@ section.sec-three
       font-weight: bold
     p
       font-size: 16px
+    @media (max-width: $screen-md-min)
+      text-align: center
+      margin-bottom: 50px
   .col-md-4
     padding: 20px 0
     background: $gr2
@@ -80,6 +83,8 @@ section.sec-three
       text-decoration: none
       font-size: 24px
       font-weight: bold
+    @media (max-width: $screen-sm-min)
+      margin: 0 15px
 
 section.sec-four
   padding: 100px 0
