main page styled & footer map styled

--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -14,11 +14,17 @@
 
   .navbar-wrp:nth-of-type(1)
     padding: 15px 20px 10px 20px
+    @media (max-width: $screen-collapse-min)
+      padding-top: 0
   .navbar-wrp:nth-of-type(2)
     padding-top: 20px
     padding-right: 15px
-    @media (max-width: $screen-sm-min)
+    @media (max-width: $screen-collapse-min)
       padding: 5px 0 
+
+  #navbar-top
+    @media (max-width: 832px)
+      display: none
 
   #navbar-top.navbar-nav>li
     color: $bl 
@@ -29,10 +35,11 @@
   ul#navbar-main
     position: relative
     top: 1px
+    letter-spacing: -1px
     @media (max-width: $screen-lg-min)
       top: 0
       margin-right: -15px
-    @media (max-width: $screen-sm-min)
+    @media (max-width: $screen-collapse-min)
       text-align: center
       top: 0
 
@@ -53,7 +60,9 @@
     @media (max-width: $screen-sm-min)
       border: none
       color: $or
-  
+  #navbar-soc
+    @media (max-width: 832px)
+      display: none
   #navbar-soc.navbar-nav>li>a,
     color: $bl 
     padding-left: 9px
@@ -78,7 +87,7 @@ a.navbar-brand
   @media (max-width: $screen-md-min)
     height: 500px
   @media (max-width: $screen-sm-min)
-    height: 300px
+    height: 350px
 
 .navbar-default .navbar-toggle, 
 .navbar-default .navbar-toggle:focus, 
