--- a/sass/index.sass
+++ b/sass/index.sass
@@ -5,4 +5,9 @@
 
 body
   font-family: 'Roboto', sans-serif
-
+a
+  color: $or
+  font-size: 16px
+  &:hover, &:focus
+    color: lighten($bl, 20%) 
+    text-decoration: none
