--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -4,8 +4,8 @@ footer
       opacity: 0.2
     p
       color: $wt
-  padding-top: 70px
-  padding-bottom: 20px
+  padding-top: 60px
+  padding-bottom: 40px
   background-color: $gr2
   ul.ft-lt
     list-style: none
@@ -43,7 +43,6 @@ footer
             .fa-instagram
               margin: 3px
               position: relative
-              top: 1px
             .fa-google-plus-g
               margin: -2px
         &:hover
@@ -55,10 +54,11 @@ footer
   #container1
     margin-top: 20px
     margin-left: 30px
-    position: absolute
+    position: relative
     background: #f93
-    top: 55px
-    right: 175px
+    top: -126px
+    right: -110px
+    width: 10px
     .dot
       border: 10px solid #f93
       background: transparent
@@ -88,12 +88,94 @@ footer
       background-color: #f93
       z-index: 10
       position: absolute
+  #container2
+    margin-top: 20px
+    margin-left: 30px
+    position: relative
+    background: #f93
+    top: -135px
+    right: -90px
+    width: 10px
+    .dot
+      border: 10px solid #f93
+      background: transparent
+      -webkit-border-radius: 60px
+      -moz-border-radius: 60px
+      border-radius: 60px
+      height: 50px
+      width: 50px
+      -webkit-animation: pulse 3s ease-out
+      -moz-animation: pulse 3s ease-out
+      animation: pulse 3s ease-out
+      -webkit-animation-iteration-count: infinite
+      -moz-animation-iteration-count: infinite
+      animation-iteration-count: infinite
+      -webkit-animation-delay: .5s 
+      -moz-animation-delay: .5s
+      animation-delay: .5s 
+      position: absolute
+      top: -20px
+      left: -20px
+      z-index: 1
+      opacity: 0
+    .pulse
+      width: 10px
+      height: 10px
+      border: 5px solid #f93
+      -webkit-border-radius: 30px
+      -moz-border-radius: 30px
+      border-radius: 30px
+      background-color: #f93
+      z-index: 10
+      position: absolute
+  #container3
+    margin-top: 20px
+    margin-left: 30px
+    position: relative
+    background: #f93
+    top: -115px
+    right: -90px
+    width: 10px
+    .dot
+      border: 10px solid #f93
+      background: transparent
+      -webkit-border-radius: 60px
+      -moz-border-radius: 60px
+      border-radius: 60px
+      height: 50px
+      width: 50px
+      -webkit-animation: pulse 3s ease-out
+      -moz-animation: pulse 3s ease-out
+      animation: pulse 3s ease-out
+      -webkit-animation-iteration-count: infinite
+      -moz-animation-iteration-count: infinite
+      animation-iteration-count: infinite
+      -webkit-animation-delay: 1s 
+      -moz-animation-delay: 1s 
+      animation-delay: 1s 
+      position: absolute
+      top: -20px
+      left: -20px
+      z-index: 1
+      opacity: 0
+    .pulse
+      width: 10px
+      height: 10px
+      border: 5px solid #f93
+      -webkit-border-radius: 30px
+      -moz-border-radius: 30px
+      border-radius: 30px
+      background-color: #f93
+      z-index: 10
+      position: absolute
 
 @media (max-width: $screen-md-min)
   .col-sm-6
     margin-bottom: 25px
   .animation-map
-    margin-top: -10px
+    margin-top: -200px
+    margin-left: 40px
+    #container1
 @media (max-width: $screen-sm-min)
   .col-xs-12
     text-align: center
@@ -103,3 +185,32 @@ footer
   .animation-map
     margin-left: 0
     margin-top: 0
+    #container1
+      right: -300px
+    #container2
+      right: -288px
+    #container3
+      right: -290px
+
+@keyframes pulse
+  0% 
+    -webkit-transform: scale(0)
+    opacity: 0
+
+  25% 
+    -webkit-transform: scale(0)
+    opacity: .1
+
+  50% 
+    -webkit-transform: scale(0.1)
+    opacity: .3
+
+
+  75% 
+    -webkit-transform: scale(0.5)
+    opacity: .5
+
+  100% 
+    -webkit-transform: scale(1)
+    opacity: 0
+
