asside added to pages

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -1,7 +1,8 @@
 @import variables
 @import navigation
 @import footer
-@import sections
+@import home_sections
+@import web_design_sections
 
 body
   font-family: 'Roboto', sans-serif
