skeleton based on bs grid

--- a/sass/_web_design_sections.sass
+++ b/sass/_web_design_sections.sass
@@ -1,4 +1,14 @@
 section.web-des-sec-one
+  .container
+    .row
+      .col-md-8
+      .col-md-4
+        display: flex
+        a
+          border: 1px solid $or
+          padding: 10px 75px
+          align-self: center
+          
 section.web-des-sec-two
   .container
     .row
@@ -7,3 +17,7 @@ section.web-des-sec-two
         ul.side-nav
           list-style: none
           border-left: 1px $gr1 dashed
+          margin: 0
+          padding: 0
+          img
+            width: 70px
