portfolio sections added

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -3,6 +3,7 @@
 @import footer
 @import home_sections
 @import web_design_sections
+@import portfolio_sections
 
 body
   font-family: 'Roboto', sans-serif
