--- a/sass/_web_design_sections.sass
+++ b/sass/_web_design_sections.sass
@@ -1,6 +1,24 @@
 section.web-des-sec-one
   .row
     .col-sm-8
+    .col-sm-4
+      padding: 50px 20px 50px 20px
+      a
+        border: 1px solid $or
+        display: block
+        padding: 10px 0
+        width: 240px
+        font-size: 18px
+        text-align: center
+      @media (max-width: $screen-sm-min)
+        padding: 0
+        a
+          width: 95%
+          margin: 40px auto
+
+section.web-des-sec-two
+  .row
+    .col-sm-8
       .row
         .col-sm-12
           h2
@@ -8,20 +26,6 @@ section.web-des-sec-one
     .col-sm-4
       .row
         &:nth-of-type(1)
-          padding: 50px 20px 50px 20px
-          a
-            border: 1px solid $or
-            display: block
-            padding: 10px 0
-            width: 240px
-            font-size: 18px
-            text-align: center
-          @media (max-width: $screen-sm-min)
-            padding: 0
-            a
-              width: 95%
-              margin: 40px auto
-        &:nth-of-type(2)
           ul.side-nav
             padding: 30px 0 20px 0
             list-style: none
