portfolio styles finished

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -7,6 +7,14 @@
 
 body
   font-family: 'Roboto', sans-serif
+h2
+  font-weight: bold
+  font-size: 30px
+  padding-bottom: 15px
+h3
+  font-weight: bold
+  font-size: 20px
+  padding-bottom: 5px
 a
   color: $or
   font-size: 16px
@@ -15,3 +23,6 @@ a
     text-decoration: none
 .row-eq-height
   display: flex
+
+.cl-ac
+  padding: 30px 0
