rest sections added to about subpage

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -4,6 +4,7 @@
 @import home_sections
 @import web_design_sections
 @import portfolio_sections
+@import about_sections
 
 body
   font-family: 'Roboto', sans-serif
