about subpage sections renamed

--- a/sass/_about_sections.sass
+++ b/sass/_about_sections.sass
@@ -29,7 +29,7 @@ section.about-sec-two
             color: $or
 
 
-section.port-sec-four
+section.about-sec-four
   background: $or
   margin: 40px 0
   .st-wrp
@@ -63,7 +63,7 @@ section.port-sec-four
       margin: 20px auto
 
 
-section.about-sec-four
+section.about-sec-five
   padding: 40px 0
   .container
     h2
@@ -119,7 +119,7 @@ section.about-sec-four
 .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span
   background: $gr1
 
-section.container.about-sec-five
+section.container.about-sec-six
   padding: 40px 0
   .row
     padding: 10px 0
