contact us finished

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -5,6 +5,7 @@
 @import web_design_sections
 @import portfolio_sections
 @import about_sections
+@import contact_sections
 
 body
   font-family: 'Roboto', sans-serif
