copies added main page

--- a/sass/_home_sections.sass
+++ b/sass/_home_sections.sass
@@ -141,7 +141,7 @@ section.sec-four
               margin-top: 40px
             span.te-func
               &::before
-                content: '- '
+                // content: '- '
               color: $gr1
               text-align: center
               display: block
