--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -49,15 +49,14 @@ footer
           text-decoration: none
 
 .animation-map
-  margin-left: -25px
-  margin-top: -3px
+  margin-top: 10px
+  img
+    width: 250px
   #container1
-    margin-top: 20px
-    margin-left: 30px
     position: relative
     background: #f93
-    top: -126px
-    right: -110px
+    top: -98px
+    left: 121px
     width: 10px
     .dot
       border: 10px solid #f93
@@ -89,12 +88,10 @@ footer
       z-index: 10
       position: absolute
   #container2
-    margin-top: 20px
-    margin-left: 30px
     position: relative
     background: #f93
-    top: -135px
-    right: -90px
+    top: -105px
+    left: 106px
     width: 10px
     .dot
       border: 10px solid #f93
@@ -129,12 +126,10 @@ footer
       z-index: 10
       position: absolute
   #container3
-    margin-top: 20px
-    margin-left: 30px
     position: relative
     background: #f93
-    top: -115px
-    right: -90px
+    top: -89px
+    left: 109px
     width: 10px
     .dot
       border: 10px solid #f93
@@ -173,7 +168,7 @@ footer
   .col-sm-6
     margin-bottom: 25px
   .animation-map
-    margin-top: -200px
+    margin-top: -195px
     margin-left: 40px
     #container1
 @media (max-width: $screen-sm-min)
@@ -183,14 +178,20 @@ footer
   .ft-lt
     padding: 0
   .animation-map
-    margin-left: 0
-    margin-top: 0
+    margin: 0
+    padding: 0
     #container1
-      right: -300px
+      display: block
+      margin: 0 auto
+      left: 5px
     #container2
-      right: -288px
+      display: block
+      margin: 0 auto
+      left: -13px
     #container3
-      right: -290px
+      display: block
+      margin: 0 auto
+      left: -10px
 
 @keyframes pulse
   0% 
