--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -3,11 +3,13 @@
   border: none
 
 .navbar-default
+  position: fixed
+  width: 100%
   background-color: $wt
   border-color: transparent
   font-size: 16px
   top: 0
-  transition: top .3s ease-out
+  transition: top .2s ease-out
   border-radius: 0
 
   .navbar-nav>li>a
