--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -156,4 +156,7 @@ a.navbar-brand
   border-radius: initial
   top: -35px
   z-index: 999
+  .container-fluid .navbar-collapse .navbar-wrp
+    #navbar-main
+      top: 2px
 
