--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .navbar-fixed {
-    top: 0px;
+    top: -1px;
 }
 
 .navbar-fixed #navbar-top {
@@ -313,6 +313,9 @@ section.web-des-sec-two .row .col-sm-4 .row:nth-of-type(1) ul.side-nav li:last-o
     padding: 30px 0;
     border-bottom: 1px dashed #bdbec0;
     margin-bottom: 60px;
+}
+.cl-ac p {
+    padding-left: 15px;
 }
 .cl-ac-border-no{
     margin-bottom: 0px!important; 
