--- a/sass/index.sass
+++ b/sass/index.sass
@@ -28,3 +28,15 @@ a
 
 .cl-ac
   padding: 30px 0
+
+p
+  font-size: 16px
+  line-height: 30px
+  letter-spacing: .5px
+
+.dig-mar-svg-sm
+  position: relative
+  left: 5px
+.dig-mar-svg
+  position: relative
+  left: 8px
