--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -42,7 +42,7 @@
     top: 1px
     letter-spacing: -1px
     @media (max-width: $screen-lg-min)
-      top: 0
+      top: 1px
       margin-right: -15px
     @media (max-width: $screen-collapse-min)
       text-align: center
