--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -42,14 +42,14 @@
     top: 1px
     letter-spacing: -1px
     @media (max-width: $screen-lg-min)
-      top: 1px
+      top: 0
       margin-right: -15px
     @media (max-width: $screen-collapse-min)
       text-align: center
       top: 0
 
   #navbar-main.navbar-nav>li>a,
-    color: $bl
+    color: $bl 
     padding-left: 10px
     padding-right: 10px
     @media (max-width: $screen-sm-min)
@@ -156,7 +156,4 @@ a.navbar-brand
   border-radius: initial
   top: -35px
   z-index: 999
-  .container-fluid .navbar-collapse .navbar-wrp
-    #navbar-main
-      top: 2px
 
