--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -43,7 +43,7 @@
     top: 1px
     letter-spacing: -1px
     @media (max-width: $screen-lg-min)
-      top: 0
+      top: 2
       margin-right: -15px
     @media (max-width: $screen-collapse-min)
       text-align: center
@@ -157,4 +157,19 @@ a.navbar-brand
   border-radius: initial
   top: -35px
   z-index: 999
+  .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
+    top: 2px
+  @media (min-width: $screen-lg-min)
+    .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
+      top: 2px
+  @media (max-width: $screen-md-min)
+    .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
+      top: 0px
+@media (max-width: $screen-lg-min)
+  .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
+    top: 0px
+@media (max-width: $screen-md-min)
+  .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
+    top: 0px
+
 
