--- a/sass/index.sass
+++ b/sass/index.sass
@@ -9,20 +9,30 @@
 
 body
   font-family: 'Roboto', sans-serif
+  font-size: 12px
+
 h2
   font-weight: bold
-  font-size: 30px
+  font-size: 28px
   padding-bottom: 15px
 h3
   font-weight: bold
   font-size: 20px
   padding-bottom: 5px
+h4
+  font-size: 20px
+  font-weight: normal
+
+p
+  font-size: 16px
+  line-height: 30px
 a
   color: $or
   font-size: 16px
   &:hover, &:focus
     color: lighten($bl, 20%) 
     text-decoration: none
+
 .row-eq-height
   display: flex
 
