our stock images added

--- a/sass/_web_design_sections.sass
+++ b/sass/_web_design_sections.sass
@@ -23,6 +23,8 @@ section.web-des-sec-two
         .col-sm-12
           h2
             margin-top: 50px
+      .row:nth-of-type(7)
+        margin-bottom: 55px
     .col-sm-4
       .row
         &:nth-of-type(1)
