web des sections

--- a/sass/_navigation.sass
+++ b/sass/_navigation.sass
@@ -157,19 +157,19 @@ a.navbar-brand
   border-radius: initial
   top: -35px
   z-index: 999
-  .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
-    top: 2px
-  @media (min-width: $screen-lg-min)
-    .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
-      top: 2px
-  @media (max-width: $screen-md-min)
-    .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
-      top: 0px
-@media (max-width: $screen-lg-min)
-  .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
-    top: 0px
-@media (max-width: $screen-md-min)
-  .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
-    top: 0px
+  // .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
+  //   top: 2px
+  // @media (min-width: $screen-lg-min)
+  //   .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
+  //     top: 2px
+  // @media (max-width: $screen-md-min)
+  //   .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
+  //     top: 0px
+// @media (max-width: $screen-lg-min)
+  // .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
+  //   top: 0px
+// @media (max-width: $screen-md-min)
+  // .container-fluid .navbar-collapse .navbar-wrp #navbar-main 
+  //   top: 0px
 
 
