--- a/sass/_web_design_sections.sass
+++ b/sass/_web_design_sections.sass
@@ -7,7 +7,7 @@ section.web-des-sec-one
         border: 1px solid $or
         display: block
         padding: 10px 0
-        width: 240px
+        width: 100%
         font-size: 18px
         text-align: center
       @media (max-width: $screen-sm-min)
@@ -20,9 +20,11 @@ section.web-des-sec-two
   .row
     .col-sm-8
       .row
-        .col-sm-12
-          h2
-            margin-top: 50px
+        h2
+          margin-top: 50px
+        .col-md-12
+          p
+            margin-bottom: 30px
       .row:nth-of-type(7)
         margin-bottom: 55px
     .col-sm-4
