awesome footer size

--- a/sass/_web_design_sections.sass
+++ b/sass/_web_design_sections.sass
@@ -77,3 +77,6 @@ section.web-des-sec-two
                 width: 100px
                 float: none
                 margin-right: 0
+.stack-wrp
+  display: flex
+  justfiy-content: space-between
