--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -1,3 +1,5 @@
+.fa-plus
+  font-size: 11px
 footer
   .container
     hr
@@ -214,4 +216,5 @@ footer
   100% 
     -webkit-transform: scale(1)
     opacity: 0
+
 
