footer logo styles

--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -4,6 +4,13 @@
   bottom: 2px
 #ft_logo
   width: 120px
+  position: relative
+  bottom: 1px
+  margin-left: 10px
+.ft_logo_wrp
+  font-size: 13px
+  letter-spacing: .6px
+  font-weight: bold
 footer
   .container
     hr
