--- a/sass/_web_design_sections.sass
+++ b/sass/_web_design_sections.sass
@@ -79,4 +79,4 @@ section.web-des-sec-two
                 margin-right: 0
 .stack-wrp
   display: flex
-  justfiy-content: space-between
+  justify-content: space-between
