--- a/css/style.css
+++ b/css/style.css
@@ -1,180 +1,279 @@
 body {
-  overflow-x: hidden;
+    overflow-x: hidden;
 }
 
-.row{
-  outline: none;
+.row {
+    outline: none;
+}
+
+a{
+    -webkit-transition: all .25s;
+       -moz-transition: all .25s;
+        -ms-transition: all .25s;
+         -o-transition: all .25s;
+            transition: all .25s;
 }
 /*header nav*/
 
 .navbar {
-  z-index: 9999;
+    z-index: 9999;
 }
 
 .navbar-fixed {
-  top: 0px;
+    top: 0px;
 }
 
 .navbar-fixed .container-fluid .navbar-collapse .navbar-wrp #navbar-main {
-  /* top: 2px; */
+    /* top: 2px; */
 }
+
 .navbar-fixed #navbar-top {
-  display: none;
+    display: none;
 }
 
 .navbar-fixed .navbar-wrp:nth-of-type(2) {
-  padding-top: 0px;
+    padding-top: 0px;
 }
 
 .navbar-wrp:nth-of-type(1),
 a.navbar-brand {
-  -webkit-transition: all .25s;
-  -moz-transition: all .25s;
-  -ms-transition: all .25s;
-  -o-transition: all .25s;
-  transition: all .25s;
+    -webkit-transition: all .25s;
+    -moz-transition: all .25s;
+    -ms-transition: all .25s;
+    -o-transition: all .25s;
+    transition: all .25s;
 }
 
 .navbar-fixed .navbar-wrp:nth-of-type(1) {
-  padding: 6px;
+    padding: 6px;
 }
 
 .navbar-fixed a.navbar-brand {
-  padding: 5px;
+    padding: 5px;
 }
 
 
 /*slider header home*/
 
 .header-cont {
-  top: 85px;
-  z-index: 0;
-  height: inherit;
-  padding: 200px 12%;
-  background-position: left;
+    top: 85px;
+    z-index: 0;
+    height: inherit;
+    padding: 200px 12%;
+    background-position: left;
 }
 
 .header-cont .left {
-  /*position: absolute;*/
-  left: 0px;
-  width: 100%;
-  /*padding: 12% 20px 0px 10%;*/
+    /*position: absolute;*/
+    left: 0px;
+    width: 100%;
+    /*padding: 12% 20px 0px 10%;*/
 }
 
 .header-cont .left h1 {
-  color: #fff;
-  font-size: 60px;
-  min-height: 60px;
-  text-transform: uppercase;
-  font-weight: 900;
+    color: #fff;
+    font-size: 60px;
+    min-height: 60px;
+    text-transform: uppercase;
+    font-weight: 900;
 }
 
 .header-cont .left h2 {
-  color: #fff;
-  font-weight: 100;
+    color: #fff;
+    font-weight: 100;
 }
 
 .ml12 {
-  font-weight: 200;
-  /*font-size: 1.8em;*/
-  text-transform: uppercase;
-  /*letter-spacing: 0.5em;*/
+    font-weight: 200;
+    /*font-size: 1.8em;*/
+    text-transform: uppercase;
+    /*letter-spacing: 0.5em;*/
 }
 
 .ml12 .letters {
-  position: absolute;
-  display: block;
-  /*line-height: 1em;*/
+    position: absolute;
+    display: block;
+    /*line-height: 1em;*/
 }
 
 .ml12 .letter {
-  display: inline-block;
-  /*line-height: 1em;*/
+    display: inline-block;
+    /*line-height: 1em;*/
 }
 
 .header-cont .right {
-  position: absolute;
-  right: 0px;
-  bottom: 0px;
-  width: 45%;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    width: 45%;
 }
 
 .header-cont .right img {
-  width: 100%;
+    width: 100%;
 }
 
 .sec-one {
-  /*padding: 85px 0px 0px;*/
-}
-.pa-top-85{
-  padding: 85px 0 0;
+    /*padding: 85px 0px 0px;*/
 }
 
-@media (max-width: 768px){
-  .header-cont {
-    padding: 50px 0px 0px 15px;
-    top: 40px;
-  }
-  .header-cont .right{
-    position: inherit;
-    width: 100%;
-  }
-  .header-cont .left h1{
-    font-size: 24px;
-  }
-  .header-cont .left h2{
-    font-size: 16px;
-    padding-bottom: 0;
-    margin-top: -27px;
-  }
-  section.web-des-sec-two .row .col-sm-4 .row:nth-of-type(1) ul.side-nav{
-    padding: 15px;
-  }
-  .pa-top-85 {
-    padding: 0;
-  }
+.pa-top-85 {
+    padding: 85px 0 0;
 }
 
+@media (max-width: 768px) {
+    .header-cont {
+        padding: 50px 0px 0px 15px;
+        top: 40px;
+    }
 
+    .header-cont .right {
+        position: inherit;
+        width: 100%;
+    }
 
+    .header-cont .left h1 {
+        font-size: 24px;
+    }
 
+    .header-cont .left h2 {
+        font-size: 16px;
+        padding-bottom: 0;
+        margin-top: -27px;
+    }
+
+    section.web-des-sec-two .row .col-sm-4 .row:nth-of-type(1) ul.side-nav {
+        padding: 15px;
+    }
+
+    .pa-top-85 {
+        padding: 0;
+    }
+    .container .web-des-sec-two{
+        padding-top:30px!important;
+        padding-bottom: 30px!important;
+    }
+}
+#navbar-top>li>a{
+    padding: 0px;
+    color: inherit;
+}
+#navbar-top>li>a:hover {
+    padding: 0px;
+    color:#f4972d;
+}
+#navbar-top>li>a>i{
+    color:#f4972d;
+    margin-right:5px; 
+}
+
+/*home*/
+section.sec-three .col-md-8 h2{
+  font-size: 34px;
+}
+section.sec-two h2, section.sec-four .container h2 {
+    background: #fff;
+    padding-bottom: 15px;
+    margin: 0;
+    font-weight: bold;
+    font-size: 73px;
+    opacity: 0.;
+    color: rgba(0,0,0, 0.2);
+}
+
+/*testymonial*/
+/*.owl-carousel.owl-drag .owl-item .cyt::before{
+    content: "“";
+    display: block;
+    position: absolute;
+    font-size: 200px;
+    top: 0;
+    left: 0px;
+    line-height: 197px;
+    opacity: 0.06;
+
+}*/
 /*icon product home*/
 
 .icon-svg {
-  margin: 0;
-  padding: 35px;
-  border: 2px solid #babdc0;
-  border-radius: 100%;
-  height: 130px;
-  width: 130px;
-  margin: 0 auto;
-  display: block;
-  margin: 60px auto;
-  /* display: table; */
-  -webkit-transition: .5s;
-  /* Safari */
-  transition: .5s;
+    margin: 0;
+    padding: 35px;
+    border: 2px solid #babdc0;
+    border-radius: 100%;
+    height: 130px;
+    width: 130px;
+    margin: 0 auto;
+    display: block;
+    margin: 60px auto;
+    /* display: table; */
+    -webkit-transition: .5s;
+    /* Safari */
+    transition: .5s;
 }
 
 .icon-svg svg {
-  text-align: center;
-  margin: 0 auto;
-  display: block;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
 }
 
 .sec-one .col-md-3:hover>.icon-svg {
-  border: 1px solid #babdc0;
-  background: #f4972d;
-  transform: scale(1.1);
-  transform-origin: 50% 50%;
-  -webkit-transition: .5s;
-  /* Safari */
-  transition: .5s;
+    border: 1px solid #babdc0;
+    background: #f4972d;
+    transform: scale(1.1);
+    transform-origin: 50% 50%;
+    -webkit-transition: .5s;
+    /* Safari */
+    transition: .5s;
 }
 
 .sec-one .col-md-3:hover>.icon-svg>svg>path,
 .sec-one .col-md-3:hover>.icon-svg>svg>circle {
-  fill: #fff;
+    fill: #fff;
+}
+
+section.sec-one{
+    padding-bottom: 60px;
+}
+section.sec-one .container .row .col-md-3 a {
+    font-size: 16px;
+    color: #f4972d;
+    text-decoration: none;
+    /* padding-bottom: 60px; */
+    font-weight: normal;
+    border: 1px solid #f4972d;
+    padding: 5px!important;
+    max-width: 200px;
+    display: block;
+    margin: 0 auto;
+}
+section.sec-one .container .row .col-md-3 a:hover {
+    background: #f4972d;
+    color: #fff;
+    border: 1px solid #f4972d;
+   
+}
+
+.affix-bottom {
+    /*position: fixed !important;*/
+}
+.affix {
+    position: fixed!important;
+    top: 91px; // i made it equal to the padding-top of the item
+}
+.wrap{
+    /*display: inline-block;*/
+}
+
+
+@media (max-width: 768px) {
+    section.sec-two h2, section.sec-four .container h2 {
+        font-size: 31px;
+    }
+    section.web-des-sec-two .row .col-sm-4 .row:nth-of-type(1) ul.side-nav li{
+        text-align: inherit;
+            padding-bottom: 25px;
+    }
+
 }
 
 
@@ -182,42 +281,58 @@ a.navbar-brand {
 /*Header page*/
 
 .header-cont-page {
-  width: 100%;
-  padding: 150px 0px 100px;
-  position: relative;
-  background-size: cover;
-  background-position: center;
+    width: 100%;
+    padding: 150px 0px 100px;
+    position: relative;
+    background-size: cover;
+    background-position: center;
 }
 
 .header-cont-page h1 {
-  color: #fff;
-  font-size: 60px;
-  text-transform: uppercase;
-  font-weight: 900;
+    color: #fff;
+    font-size: 60px;
+    text-transform: uppercase;
+    font-weight: 900;
 }
 
 .header-cont-page .right {
-  position: absolute;
-  right: 0px;
-  width: 20%;
-  bottom: 0px;
+    position: absolute;
+    right: 0px;
+    width: 20%;
+    bottom: 0px;
 }
 
 .header-cont-page .right img {
-  width: 100%;
+    width: 100%;
+}
+.btn-home-sl {
+    font-size: 16px;
+    color: #f4972d;
+    font-weight: normal;
+    border: 1px solid #f4972d;
+    padding: 10px 15px;
+    display: inline-block;
+    margin: 15px 0px;
+}
+.btn-home-sl:hover, .btn-home-sl:focus, .btn-home-sl:active {
+    background: #f4972d;
+    color: #fff;
+    border: 1px solid #f4972d;
 }
 
-@media (max-width: 768px){
-  .header-cont-page h1 {
-    font-size:28px;
-  }
-  .header-cont-page .right {
-    width: 100%;
-    position: inherit;
-  }
-  .header-cont-page {
-    padding: 100px 0px 0px;
-  }
+@media (max-width: 768px) {
+    .header-cont-page h1 {
+        font-size: 28px;
+    }
+
+    .header-cont-page .right {
+        width: 100%;
+        position: inherit;
+    }
+
+    .header-cont-page {
+        padding: 100px 0px 0px;
+    }
 
 }
 
@@ -226,158 +341,205 @@ a.navbar-brand {
 /*sidebar*/
 
 .icon-svg2 {
-  float: left;
-  margin-right: 20px;
-  position: relative;
-  top: -10px;
-  margin: 0;
-  padding: 18px;
-  border: 1px solid #babdc0;
-  border-radius: 100%;
-  height: 70px;
-  width: 70px;
-  margin: 0 auto;
-  display: block;
-  /* margin: 60px auto; */
-  /* display: table; */
-  -webkit-transition: .5s;
-  transition: .5s;
-  clear: both;
-  margin-right: 20px;
+    float: left;
+    margin-right: 20px;
+    position: relative;
+    top: -10px;
+    margin: 0;
+    padding: 18px;
+    border: 1px solid #babdc0;
+    border-radius: 100%;
+    height: 70px;
+    width: 70px;
+    margin: 0 auto;
+    display: block;
+    /* margin: 60px auto; */
+    /* display: table; */
+    -webkit-transition: .5s;
+    transition: .5s;
+    clear: both;
+    margin-right: 20px;
 }
 
 .icon-svg2 svg {
-  text-align: center;
-  margin: 0 auto;
-  display: block;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
 }
 
 .icon-svg2 svg path,
 circle {
-  fill: #babdc0;
+    fill: #babdc0;
 }
 
 .side-nav li:hover>a>.icon-svg2 {
-  border: 1px solid #babdc0;
-  background: #f4972d;
-  transform: scale(1.1);
-  transform-origin: 50% 50%;
-  -webkit-transition: .5s;
-  /* Safari */
-  transition: .5s;
+    border: 1px solid #babdc0;
+    background: #f4972d;
+    transform: scale(1.1);
+    transform-origin: 50% 50%;
+    -webkit-transition: .5s;
+    /* Safari */
+    transition: .5s;
 }
 
 .side-nav li:hover>a>.icon-svg2>svg>path,
 .side-nav li:hover>a>.icon-svg2>svg>circle {
-  fill: #fff;
+    fill: #fff;
 }
 
-.active  {
-  cursor: auto;
+.active {
+    cursor: auto;
 }
 
-.active  .icon-svg2 {
-  border-color: #f4972d!important;
+.active .icon-svg2 {
+    border-color: #f4972d !important;
 }
 
-.active  .icon-svg2 svg path {
-  fill: #f4972d;
+.active .icon-svg2 svg path {
+    fill: #f4972d;
 }
 
 .side-nav .active:hover>a>.icon-svg2 {
 
-  background: #fff;
-  box-shadow: none;
-  transform: scale(1);
-  transform-origin: 50% 50%;
-  -webkit-transition: .5s;
-  /* Safari */
-  transition: .5s;
+    background: #fff;
+    box-shadow: none;
+    transform: scale(1);
+    transform-origin: 50% 50%;
+    -webkit-transition: .5s;
+    /* Safari */
+    transition: .5s;
 }
 
 .side-nav .active:hover>a>.icon-svg2>svg>path,
 .side-nav .active:hover>a>.icon-svg2>svg>circle {
-  fill: #f4972d;
+    fill: #f4972d;
 }
 
 .side-nav .active:hover>a>div>span {
-  color: #f4972d!important;
+    color: #f4972d !important;
 }
 
 
-section.web-des-sec-two .row .col-sm-4 .row:nth-of-type(1) ul.side-nav li:last-of-type div p:last-of-type a{
-  color:#fff;
+section.web-des-sec-two .row .col-sm-4 .row:nth-of-type(1) ul.side-nav li:last-of-type div p:last-of-type a {
+    color: #fff;
 }
 
 
 /*callto action*/
 
 .cl-ac {
-  padding: 30px 0;
-  border-bottom: 1px dashed #bdbec0;
-  margin-bottom: 50px;
-}
-.cl-ac-border-no{
-  margin-bottom: 0px!important; 
-  border:none!important;
+    padding: 30px 0;
+    border-bottom: 1px dashed #bdbec0;
+    margin-bottom: 50px;
 }
 
-.port-sec-four .cl-ac h2, .port-sec-four .cl-ac p{
-  color:#fff;
-}
-.port-sec-four, .port-sec-two{
-  overflow-x:hidden; 
+.cl-ac-border-no {
+    margin-bottom: 0px !important;
+    border: none !important;
 }
 
-.about-sec-four .cl-ac h2, .about-sec-four .cl-ac p{
-  color:#fff;
+.port-sec-four .cl-ac h2,
+.port-sec-four .cl-ac p {
+    color: #fff;
+}
+
+.port-sec-four,
+.port-sec-two {
+    overflow-x: hidden;
+}
+
+.about-sec-four .cl-ac h2,
+.about-sec-four .cl-ac p {
+    color: #fff;
 }
 
 
 /*Content*/
 
-.points-icon-list{
-  padding: 25px 15px 15px;
-  width: 100%;
-  max-width: 125px;
-  margin: 0 auto;
-  display: block;
+.points-icon-list {
+    padding: 25px 15px 15px;
+    width: 100%;
+    max-width: 125px;
+    margin: 0 auto;
+    display: block;
 }
-.web-des-sec-two{
-  overflow-x:hidden; 
+
+.web-des-sec-two {
+    overflow-x: hidden;
 }
 
 /*breadcrumb*/
 
-.breadcrumbs{
-  text-align: center;
-  padding: 0px;
+.breadcrumbs {
+    text-align: center;
+    padding: 0px;
 }
-.breadcrumbs li{
-  display: inline-block;
-  position: relative;
+
+.breadcrumbs li {
+    display: inline-block;
+    position: relative;
 }
-.breadcrumbs li a{
-  padding: 5px 10px;
-  font-size: 14px;
-  font-weight: 300;
+
+.breadcrumbs li a {
+    padding: 5px 10px;
+    font-size: 14px;
+    font-weight: 300;
 }
-.breadcrumbs li a:after{
-  content: "/";
-  display: block;
-  position: absolute;
-  right: -5px;
-  top: 0;
+
+.breadcrumbs li a:after {
+    content: "/";
+    display: block;
+    position: absolute;
+    right: -5px;
+    top: 0;
 }
-.breadcrumbs li:last-child > a:after{
-  content: "";
-  display: block;
-  position: absolute;
-  right: -5px;
-  top: 0;
+
+.breadcrumbs li:last-child>a:after {
+    content: "";
+    display: block;
+    position: absolute;
+    right: -5px;
+    top: 0;
 }
-.breadcrumbs li a:hover{
-  color:#fff;
+
+.breadcrumbs li a:hover {
+    color: #fff;
+}
+
+/*footer*/
+.ft-lt-hover li a i {
+    padding-right: 0px !important;
+    margin-right: 10px;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -ms-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+
+}
+
+.ft-lt-hover li a:hover>i {
+
+    -webkit-transform: rotate(359deg);
+    -moz-transform: rotate(359deg);
+    -ms-transform: rotate(359deg);
+    -o-transform: rotate(359deg);
+    transform: rotate(359deg);
+
+}
+footer ul.ft-lt li .ft-soc-lt li a{
+  border-radius: 0px;
 }
 
 
+/*Get_aQuote*/
+
+.modal_quote{
+    background: rgba(0,0,0, 0.8);
+    z-index: 20000000000000000000000;
+}
+
+label{display:none!important;}
+.btn-success{
+    background: red!important;
+}
